k3s_cluster/base/dmz/media/jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-web
  namespace: dmz
  labels:
    app: dmz-media-jellyfin
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`jellyfin.media.dmz.home`)
      # middlewares:
      #   - name: dmz-media-middleware-auth-authentik
      services:
        - name: dmz-media-jellyfin-service
          port: 6650
          #tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-websecure
  namespace: dmz
  labels:
    app: dmz-media-jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.media.dmz.home`)
      # middlewares:
      #   - name: dmz-media-middleware-auth-authentik
      services:
        - name: dmz-media-jellyfin-service
          port: 6651
          # ---
          # apiVersion: traefik.io/v1alpha1
          # kind: IngressRoute
          # metadata:
          #   name: ingressroute-dlna
          #   namespace: dmz
          #   labels:
          #     app: dmz-media-jellyfin
          # spec:
          #   entryPoints:
          #     - dlna
          #   routes:
          #     - kind: Rule
          #       match: Host(`dlna.jellyfin.media.dmz.home`)
          #       middlewares:
          #         - name: dmz-media-dmz-media-middleware-auth-authentik
          #       services:
          #         - name: dmz-media-jellyfin-service
          #           port: 6653
          #   #tls: {}
